# church-members-cli

./: README.md  church-members-cli  church-members-cli.py  pyproject.toml
app/: __init__.py  main.py
app/cmd/: __init__.py  utils.py
app/internal/: api.py  authentication.py  config.py  service.py
app/internal/domain/: exception.py
cmd/: __init__.py
internal/: api.py  config.py  service.py
tests/internal/: __init__.py  test_api.py  test_service.py
