[tool.poetry]
name = "church-members-cli"
version = "0.1.0"
description = "A simple CLI to access church-members-api information"
authors = ["brunodmartins <bdm2943@icloud.com>"]
license = "GNU 3"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
